// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Bom {
  id   String @id @default(uuid())
  tool String @db.Text
  format String @db.Text
  createdAt   DateTime @default(now()) @db.Timestamp(0)
  updatedAt   DateTime @updatedAt @db.Timestamp(0)
  component Component[]
}

model Metadata {
  bomref String @db.Text
  purl String @unique
  name String @db.Text
  version String @db.Text
  cpe String @db.Text
  component Component[]
  @@id([bomref, purl])
}

model Vulnerability {
  vulns_id String @unique
  score String @db.Text
  severity String @db.Text
  component Component[]
}

model Component {
  bomref String @db.Text
  purl String @unique
  name String @db.Text
  version String @db.Text
  vulns_id String
  fixed_version String @db.Text
  id   String @id @default(uuid())
  // Relation
  metadata      Metadata?    @relation(fields: [bomref, purl], references: [bomref, purl])
  vulnerability Vulnerability? @relation(fields: [vulns_id], references: [vulns_id])
  bom           Bom?           @relation(fields: [id], references: [id])
}


