@startuml sbom

' 定義：テーブルを表すステレオタイプを追加
!define TABLE(x) class x << (T,#FFAAAA) >>

TABLE(Bom) {
  * uuid : TEXT <<PK>>
  --
  tool : TEXT
  format : TEXT
}

TABLE(Metadata) {
  * bomref : TEXT <<PK>>
  * purl : TEXT <<PK>>
  --
  name : TEXT
  version : TEXT
  cpe : TEXT
}

TABLE(Vulnerabilities) {
  * vulns_id : TEXT <<PK>>
  --
  cvss : TEXT
  score : REAL
  severity : TEXT
}

TABLE(Packages) {
  * bomref : TEXT <<PK>>
  * purl : TEXT <<PK>>
  * vulns_id : TEXT <<PK>>
  * uuid : TEXT <<PK>>
  --
  fixed_version : TEXT
}

' リレーション定義
Bom "1" -- "0..*" Packages : "uuid"
Metadata "1" -- "0..*" Packages : "(bomref, purl)"
Vulnerabilities "1" -- "0..*" Packages : "vulns_id"

@enduml
